--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "sql-builder",
   "preferGlobal": "false",
-  "version": "0.0.2beta",
+  "version": "0.0.3beta",
   "author": {
     "email": "serg4172@mail.ru",
     "name": "Sergey Romanov",
     "url": "http://www.facebook.com/serhioromano"
   },
-  "description": "SQL query builder. OO query construction is very handy when you need to add `WHERE` after you know `ORDER` for example.",
+  "description": "Adapter based SQL query string builder. Get total control over constructing you SQL queries. Quickly create adapter for your favorit DB (MySQL adapter included).  Set where condition, and delete it later if your app changed its mind :).",
   "contributors": [ 
     {
       "name": "May be you?",
@@ -22,7 +22,12 @@
   "keywords": [
     "sql",
     "mysql",
-    "query"
+    "query-string-builder",
+    "query-builder",
+    "sql-string-builder",
+    "sql-builder",
+    "sql-constructor",
+    "query-constructor"
   ],
   "analyze": true,
   "license": "MIT",
